src/test/ui/issues/issue-28134.stderr
error: cannot determine resolution for the attribute macro `test`
  --> $DIR/issue-28134.rs:4:4
   |
LL | #![test]
   |    ^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to previous error

