src/test/ui/issues/issue-28134.rs
// compile-flags: --test

#![test] //~ ERROR only functions may be used as tests
